@@ -1,4 +1,8 @@
 
+Mon May 22 15:44:09 EDT 1995	Paul Park	(pjpark@mit.edu)
+	* gssapi.exp	- Add dejagnu test for GSS-API client and server.
+
+
 Thu May 11 12:25:38 EDT 1995	Paul Park	(pjpark@mit.edu)
 	Add kadmin.exp for kadmin tests.
 
